feat: Added docker compose for both queues to run at the same time

--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "check-node-version": "check-node-version --node $(cat .nvmrc)",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:sqs": "cp env.sqs .env && nest start --watch",
+    "start:rabbitmq": "cp env.rabbitmq .env && nest start --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:build": "docker-compose up --build",
+    "docker:dual": "docker-compose up --build"
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "^3.914.0",
@@ -41,6 +48,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "check-node-version": "^4.2.1",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
